<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AgregarActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginStart="50dp"
        android:layout_marginEnd="50dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/texto_TextView_datos"
            android:textSize="30dp"
            android:layout_gravity="center"
            android:layout_marginBottom="80dp"
            />
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <EditText
                android:id="@+id/edt_nombre_agregar"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:inputType="textEmailAddress"
                android:layout_marginBottom="10dp"
                android:drawablePadding="10dp"
                android:hint="@string/texto_edittext_nombre"
                android:paddingEnd="10dp"
                android:paddingStart="10dp"
                android:textSize="15sp"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <EditText
                android:id="@+id/edt_apellido_agregar"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:inputType="textEmailAddress"
                android:layout_marginBottom="10dp"
                android:drawablePadding="10dp"
                android:hint="@string/texto_edittext_apellido"
                android:paddingEnd="10dp"
                android:paddingStart="10dp"
                android:textSize="15sp"/>
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/button_agregar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/texto_button_guardar" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>